--- a/luis.html
+++ b/luis.html
@@ -19,8 +19,7 @@
     <!-- NAVBAR -->
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
-                width="70"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -55,11 +54,11 @@
 
     <main>
         <section>
-            <div class="container-flex">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col col-12 col-sm-12">
-                        <div class="card cardAnimal">
-                            <img class="card-img-top imagen" src="assets/cat-1045782_1920.jpg" alt="Imagen de fondo">
+                        <div class="card card-inverse">
+                            <img class="card-img-top" src="assets/cat-1045782_1920.jpg" alt="Imagen de fondo">
                             <div class="card-img-overlay">
                                 <h3>Raza: Bulldog Francés</h3>
                                 <hr class="my-4">
@@ -76,9 +75,7 @@
                                 <p class="lead"><strong>Descripción</strong></p>
                                 <ul class="list-unstyled list-inline d-flex justify-content-between mb-0">
                                     <li class="list-inline-item">
-                                        <p class="text-muted">Es un cachorro muy dulce que te enamorara al instante.
-                                            Esta raza se caracteriza por ser sumamente dócil con todos los integrantes
-                                            de la familia especialmente los más peques.</p>
+                                        <p class="text-muted">Es un cachorro muy dulce que te enamorara al instante. Esta raza se caracteriza por ser sumamente dócil con todos los integrantes de la familia especialmente los más peques.</p>
                                     </li>
                                 </ul>
                                 <hr class="my-4">
@@ -92,61 +89,54 @@
                                 <p class="lead"><strong>Barrio: La Comercial</strong></p>
                                 <hr class="my-4">
                                 <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
-                                
+
 
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="miniaturas">
-                    <div class="row">
-                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                            <div class="card">
-                                <a href="#" data-toggle="modal" data-target="#miModal"><img
-                                        src="assets/carr_01.jpg" class="card-img-top"
-                                        alt="imagen de mascota"></a>
-                            </div>
+                <div class="row miniaturas">
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg" class="card-img-top" alt="imagen de mascota"></a>
                         </div>
-                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                            <div class="card">
-                                <a href="#" data-toggle="modal" data-target="#miModal"><img
-                                        src="assets/carr_02.jpg" class="card-img-top"
-                                        alt="imagen de mascota"></a>
-                            </div>
+                    </div>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg" class="card-img-top" alt="imagen de mascota"></a>
                         </div>
-                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                            <div class="card">
-                                <a href="#" data-toggle="modal" data-target="#miModal"><img
-                                        src="assets/carr_03.jpg" class="card-img-top"
-                                        alt="imagen de mascota"></a>
-                            </div>
+                    </div>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_03.jpg" class="card-img-top" alt="imagen de mascota"></a>
                         </div>
-                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                            <div class="card">
-                                <a href="#" data-toggle="modal" data-target="#miModal"><img
-                                        src="assets/carr_04.jpg" class="card-img-top"
-                                        alt="imagen de mascota"></a>
-                            </div>
+                    </div>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_04.jpg" class="card-img-top" alt="imagen de mascota"></a>
                         </div>
-                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                            <div class="card">
-                                <a href="#" data-toggle="modal" data-target="#miModal"><img
-                                        src="assets/carr_01.jpg" class="card-img-top"
-                                        alt="imagen de mascota"></a>
-                            </div>
+                    </div>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg" class="card-img-top" alt="imagen de mascota"></a>
                         </div>
-                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                            <div class="card">
-                                <a href="#" data-toggle="modal" data-target="#miModal"><img
-                                        src="assets/carr_02.jpg" class="card-img-top"
-                                        alt="imagen de mascota">
-                                </a>
-                            </div>
+                    </div>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg" class="card-img-top" alt="imagen de mascota">
+                            </a>
                         </div>
                     </div>
                 </div>
+
+
 
             </div>
+
+
+
+
+
         </section>
 
         <section>
