--- a/testing.html
+++ b/testing.html
@@ -18,8 +18,7 @@
     <header></header>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
-                width="70"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -54,84 +53,75 @@
 
     <main>
         <section>
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col col-12 col-sm-12">
-                        <div class="card">
-                            <img class="imagen card-img-top" src="assets/cat-1045782_1920.jpg" style="width:300px"
-                                alt="imagen de fondo">
-                            <div class="card-img-overlay">
+                        <div class="card card-inverse ">
+                            <img class="card-img-top" src="assets/cat-1045782_1920.jpg" " alt="imagen de fondo ">
+                            <div class="card ">
                                 <h3>Raza: Bulldog Francés</h3>
-                                <hr class="my-4">
+                                <hr class="my-4 ">
                                 <ul>
-                                    <li class="list-inline-item">
+                                    <li class="list-inline-item ">
                                         <p>Color de pelo: Negro con manchas blancas</p>
                                     </li>
                                     <br>
-                                    <li class="list-inline-item">
+                                    <li class="list-inline-item ">
                                         <p>Color de ojos: Grises</p>
                                     </li>
                                 </ul>
-                                <hr class="my-4">
-                                <p class="lead"><strong>Descripción</strong></p>
-                                <ul class="list-unstyled list-inline d-flex justify-content-between mb-0">
-                                    <li class="list-inline-item">
-                                        <p class="text-muted">Es un cachorro muy dulce que te enamorara al instante.
-                                            Esta raza se caracteriza por ser sumamente dócil con todos los integrantes
-                                            de la familia especialmente los más peques.</p>
+                                <hr class="my-4 ">
+                                <p class="lead "><strong>Descripción</strong></p>
+                                <ul class="list-unstyled list-inline d-flex justify-content-between mb-0 ">
+                                    <li class="list-inline-item ">
+                                        <p class="text-muted ">Es un cachorro muy dulce que te enamorara al instante. Esta raza se caracteriza por ser sumamente dócil con todos los integrantes de la familia especialmente los más peques.</p>
                                     </li>
                                 </ul>
-                                <hr class="my-4">
-                                <p class="lead"><strong>Datos del Contacto</strong></p>
-                                <ul class="">
-                                    <li class="">Nombre</li>
-                                    <li class="">Telefono</li>
-                                    <li class="">Email</li>
+                                <hr class="my-4 ">
+                                <p class="lead "><strong>Datos del Contacto</strong></p>
+                                <ul class=" ">
+                                    <li class=" ">Nombre</li>
+                                    <li class=" ">Telefono</li>
+                                    <li class=" ">Email</li>
                                 </ul>
 
-                                <p class="lead"><strong>Barrio: La Comercial</strong></p>
-                                <hr class="my-4">
-                                <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
+                                <p class="lead "><strong>Barrio: La Comercial</strong></p>
+                                <hr class="my-4 ">
+                                <button type="button " class="btn btn-success btn-block btn ">Adoptar</button>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="miniaturas d-none d-md-block">
-                    <div class="row">
-                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                            <div class="card">
-                                <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg"
-                                        class="card-img-top" alt="imagen de mascota"></a>
+                <div class="miniaturas d-none d-md-block ">
+                    <div class="row ">
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2 ">
+                            <div class="card ">
+                                <a href="# " data-toggle="modal " data-target="#miModal "><img src="assets/carr_01.jpg " class="card-img-top " alt="imagen de mascota "></a>
                             </div>
                         </div>
-                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                            <div class="card">
-                                <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg"
-                                        class="card-img-top" alt="imagen de mascota"></a>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2 ">
+                            <div class="card ">
+                                <a href="# " data-toggle="modal " data-target="#miModal "><img src="assets/carr_02.jpg " class="card-img-top " alt="imagen de mascota "></a>
                             </div>
                         </div>
-                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                            <div class="card">
-                                <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_03.jpg"
-                                        class="card-img-top" alt="imagen de mascota"></a>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2 ">
+                            <div class="card ">
+                                <a href="# " data-toggle="modal " data-target="#miModal "><img src="assets/carr_03.jpg " class="card-img-top " alt="imagen de mascota "></a>
                             </div>
                         </div>
-                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                            <div class="card">
-                                <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_04.jpg"
-                                        class="card-img-top" alt="imagen de mascota"></a>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2 ">
+                            <div class="card ">
+                                <a href="# " data-toggle="modal " data-target="#miModal "><img src="assets/carr_04.jpg " class="card-img-top " alt="imagen de mascota "></a>
                             </div>
                         </div>
-                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                            <div class="card">
-                                <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg"
-                                        class="card-img-top" alt="imagen de mascota"></a>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2 ">
+                            <div class="card ">
+                                <a href="# " data-toggle="modal " data-target="#miModal "><img src="assets/carr_01.jpg " class="card-img-top " alt="imagen de mascota "></a>
                             </div>
                         </div>
-                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                            <div class="card">
-                                <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg"
-                                        class="card-img-top" alt="imagen de mascota"></a>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2 ">
+                            <div class="card ">
+                                <a href="# " data-toggle="modal " data-target="#miModal "><img src="assets/carr_02.jpg " class="card-img-top " alt="imagen de mascota "></a>
                             </div>
                         </div>
                     </div>
@@ -144,20 +134,20 @@
 
         <section>
             <!-- The Modal -->
-            <div class="modal" id="miModal">
-                <div class="modal-dialog">
-                    <div class="modal-content">
+            <div class="modal " id="miModal ">
+                <div class="modal-dialog ">
+                    <div class="modal-content ">
                         <!-- Modal Header -->
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <div class="modal-header ">
+                            <button type="button " class="close " data-dismiss="modal ">&times;</button>
                         </div>
                         <!-- Modal body -->
-                        <div class="modal-body">
-                            <img src="assets/carr_01.jpg" class="card-img-top" alt="... ">
+                        <div class="modal-body ">
+                            <img src="assets/carr_01.jpg " class="card-img-top " alt="... ">
                         </div>
 
                         <!-- Modal footer -->
-                        <div class="modal-footer">
+                        <div class="modal-footer ">
 
                         </div>
 
@@ -168,8 +158,8 @@
 
     </main>
     <footer>
-        <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com" target="_blank">Luis Besil</a>.
-            <span class="second-line">All Rights Reserved.</span>
+        <p class="copyright ">Copyright © 2019 <a href="mailto:l.besil@gmail.com " target="_blank ">Luis Besil</a>.
+            <span class="second-line ">All Rights Reserved.</span>
         </p>
     </footer>
 </body>
