--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="Es">
 
 <head>
-    <title>blog</title>
+    <title>Blog</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -12,9 +12,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
-<style>
-
-</style>
 
 <body>
     <!-- Optional JavaScript -->
@@ -156,15 +153,11 @@
 
     <!--FOOTER-->
     <hr />
-    <blockquote class="blockquote"></blockquote>
-    <footer class="blockquote-footer text-center">
-        <div class=footer>
-            <p>Posted by: Luis Besil</p>
-            <p>Contact information: <a href="mailto:l.besil@gmail.com">l.besil@gmail.com</a></p>
+    <footer>
+        <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com" target="_blank">Luis Besil</a>.
+            <span class="second-line">All Rights Reserved.</span>
+        </p>
     </footer>
-    </blockquote>
-
-
 </body>
 
 </html>
