--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,6 @@
 <html lang="Es">
 
 <head>
-    <title>Blog</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -12,6 +11,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
+
+<header>
+    <title>Blog</title>
+</header>
 
 <body>
     <!-- Optional JavaScript -->
