--- a/animal.html
+++ b/animal.html
@@ -2,7 +2,6 @@
 <html lang="Es">
 
 <head>
-    <title>Mascota</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -14,11 +13,14 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <title>Mascota</title>
+    </header>
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
+                width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -71,11 +73,13 @@
                                     <img class="d-block w-100" src="assets/carr_03.jpg" alt="Third slide">
                                 </div>
                             </div>
-                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                            <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                                data-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                                data-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -83,7 +87,8 @@
                     </div>
                     <div class="col col-12 col-sm-12">
                         <figure class="figure">
-                            <img src="assets/Chewy-pet-food-online-store.gif" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+                            <img src="assets/Chewy-pet-food-online-store.gif" class="figure-img img-fluid rounded"
+                                alt="A generic square placeholder image with rounded corners in a figure.">
                         </figure>
                     </div>
                 </div>
@@ -96,7 +101,8 @@
                     <!-- Card content -->
                     <div class="card-body d-flex flex-row">
                         <!-- Avatar -->
-                        <img src="assets/dog_10.jpg" class="rounded-circle mr-3" height="50px" width="50px" alt="avatar">
+                        <img src="assets/dog_10.jpg" class="rounded-circle mr-3" height="50px" width="50px"
+                            alt="avatar">
                         <!-- Content -->
                         <div>
                             <!-- Title -->
@@ -131,7 +137,9 @@
                         <ul class="list-unstyled list-inline d-flex justify-content-between mb-0">
                             <li class="list-inline-item">
 
-                                <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                                <p class="text-muted">There are many variations of passages of Lorem Ipsum available,
+                                    but the majority have suffered alteration in some form, by injected humour, or
+                                    randomised words which don't look even slightly believable. </p>
                             </li>
                         </ul>
                         <hr class="my-4">
