--- a/list.html
+++ b/list.html
@@ -2,7 +2,6 @@
 <html lang="Es">
 
 <head>
-    <title>Lista</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -15,7 +14,9 @@
 
 <body>
 
-    <header></header>
+    <header>
+        <title>Lista</title>
+    </header>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
