--- a/newAnimal.html
+++ b/newAnimal.html
@@ -2,7 +2,6 @@
 <html lang="Es">
 
 <head>
-    <title>Nuevo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -13,6 +12,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
+<header>
+    <title>Nuevo</title>
+</header>
 
 <body>
     <!-- NAVBAR -->
