--- a/whishlist.html
+++ b/whishlist.html
@@ -2,7 +2,6 @@
 <html lang="Es">
 
 <head>
-    <title>Lista de Deseos</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -15,7 +14,9 @@
 
 
 <body>
-    <header></header>
+    <header>
+        <title>Lista de Deseos</title>
+    </header>
 
 
     <!-- NAVBAR -->
