--- a/list.html
+++ b/list.html
@@ -215,6 +215,30 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <a class="flotante" href='#'><img src="assets/cerrar.png"></a>
+            <button type="button" class="btn btn-default" aria-label="Left Align">
+                    <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
+                  </button>
+                  
+                  <button type="button" class="btn btn-default btn-lg">
+                    <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star
+                  </button>
+
+            <style>
+                .flotante {
+                    width: 100px;
+                    text-align-last: left;
+                    display: scroll;
+                    position: fixed;
+                    top: 1px;
+                    left: 0px;
+                }
+            </style>
+
+
+        </section>
     </main>
     <!-- fin Main -->
 
